k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alexa-bridge
  namespace: alexa-bridge
  labels:
    app: alexa-bridge
spec:
  type: ClusterIP
  selector:
    app: alexa-bridge
  ports:
  - name: http
    port: 8000
    targetPort: 8000
